<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.summary.SummaryFragment"
    android:background="@drawable/background_image">

    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/summary_text"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182" />

    <!-- Emoticon -->

    <ImageButton
        android:id="@+id/sad_emoticon"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Sad"
        android:scaleType="fitCenter"
        android:src="@drawable/sad"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/Chill_Emoticon"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:layout_marginEnd="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Chill"
        android:scaleType="fitCenter"
        android:src="@drawable/chill"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toEndOf="@+id/In_Love_Emoticon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/In_Love_Emoticon"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/InLove"
        android:scaleType="fitCenter"
        android:src="@drawable/inlove"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/Tired_Emoticon"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Tired"
        android:scaleType="fitCenter"
        android:src="@drawable/tired"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/In_Love_Emoticon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/happy_emoticon"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Happy"
        android:scaleType="fitCenter"
        android:src="@drawable/happy"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sad_emoticon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/Angry_Emoticon"
        android:layout_width="89dp"
        android:layout_height="89dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Angry"
        android:scaleType="fitCenter"
        android:src="@drawable/anger"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toEndOf="@+id/sad_emoticon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/angry_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Chill_Emoticon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toEndOf="@+id/sad_count"
        app:layout_constraintTop_toBottomOf="@+id/Angry_Emoticon"
        app:layout_constraintVertical_bias="0.357" />

    <TextView
        android:id="@+id/chill_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toEndOf="@+id/inlove_count"
        app:layout_constraintTop_toBottomOf="@+id/Chill_Emoticon"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/happy_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Tired_Emoticon"
        app:layout_constraintEnd_toStartOf="@+id/sad_count"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/happy_emoticon"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/tired_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/inlove_count"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tired_Emoticon"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sad_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/In_Love_Emoticon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sad_emoticon"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/inlove_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/In_Love_Emoticon"
        app:layout_constraintVertical_bias="0.013" />

    <TextView
        android:id="@+id/total_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:text="Total Count: "
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tired_count"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>